# simple-graphics-stack

./: Cargo.toml  README.md
crates/simple-3d/: Cargo.toml  README.md
crates/simple-3d/examples/: cube_example.rs
crates/simple-3d/src/: camera.rs  engine.rs  scene.rs  shape.rs
crates/simple-3d/src/engine/: render_cache.rs  shape.rs
crates/simple-3d/src/engine/shape/: cube.rs
crates/simple-3d/src/shape/: cube.rs
crates/simple-graph-builder/: Cargo.toml
crates/simple-graph-builder/examples/: sin_add_exmpl.rs  sin_example.rs  tan_example.rs
crates/simple-graph-builder/src/: lib.rs
crates/simple-linear-algebra/: Cargo.toml
crates/simple-linear-algebra/src/: lib.rs  vector.rs
crates/simple-linear-algebra/src/matrix/: matrix3.rs  matrix4.rs
crates/simple-linear-algebra/src/vector/: quaternion.rs  vec2.rs  vec3.rs  vec4.rs
crates/simple-render/: Cargo.toml  LICENSE
crates/simple-render/examples/: app_example.rs  load_without_minifb.rs
crates/simple-render/src/: color.rs  lib.rs  render.rs
crates/simple-render/src/render/: app_handler.rs  buffer.rs  image.rs
examples/: sin_add_exmpl.rs  sin_example.rs  tan_example.rs
src/: color.rs  core.rs  engine.rs  lib.rs  main.rs  matrix.rs  num_traits.rs  render.rs  test.rs  vector.rs
src/core/: figura.rs  vector.rs
src/engine/: render_cache.rs  shape.rs
src/engine/shape/: cube.rs
src/matrix/: matrix2.rs  matrix3.rs  matrix4.rs
src/render/: app_handler.rs  buffer.rs
src/vector/: matrix2.rs  matrix3.rs  matrix4.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs
tests/: test.rs  window_test.rs
