[package]
name = "graph-builder-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.28.0"
simple-render-rs = { path = "C:/Users/glebm/OneDrive/Документы/ExploreTeam/repositories/simple-render-rs" }
simple-linear-algebra-rs = { git = "https://github.com/BreadAboba228/simple-linear-algebra-rs" }
